# rtspClient

./: CMakeLists.txt  main.cpp  testRTSPClient.cpp  testRTSPClient.h
test/: CMakeLists.txt  test_main.cpp
